# Educa-sete

./: LICENSE  README.md  package-lock.json  package.json  pyproject.toml
src/: scrapy.js  server.js
src/routes/: alunos_nono.routes.js  alunos_quinto.routes.js  alunos_terceiro.routes.js  aprendizado.routes.js  index.js  taxaRendimento.routes.js
